--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+	"language": " language ",
     "token": "your bot token",
     "command-prefix": "command prefix",
     "local-channel-id": "000000000000000000",
