--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "local-channel-id": "000000000000000000",
     "create-category-id": "000000000000000000",
     "admin-id-1": "000000000000000000",
-    "admin-id-2": "000000000000000000"
+    "admin-id-2": "000000000000000000",
 	"debug-mode": "true",
 
     "command-gay": "true",
