--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "language": "",
     "token": "",
     "command-prefix": "",
+	"custom-status": "online",
     "custom-activity": "",
     "owner-id": "000000000000000000",
     "local-channel-id": "000000000000000000",
@@ -21,6 +22,7 @@
     "command-exit": "true",
     "command-gay": "true",
     "command-kick": "true",
+	"command-mute": "true",
     "command-reload": "true",
     "command-removeadmin": "true",
     "command-removebypass": "true",
@@ -28,6 +30,7 @@
     "command-time": "true",
     "command-tlm": "true",
     "command-unban": "true",
+	"command-unmute": "true",
     "command-uinfo": "true",
     "command-warn": "true",
 
