--- a/config.json
+++ b/config.json
@@ -19,18 +19,21 @@
     "command-chact": "true",
     "command-copy": "true",
     "command-clearwarn": "true",
+    "command-cd": "true",
+    "command-ci": "true",
     "command-exit": "true",
     "command-gay": "true",
     "command-kick": "true",
-	"command-mute": "true",
+    "command-mute": "true",
     "command-reload": "true",
     "command-removeadmin": "true",
     "command-removebypass": "true",
 	"command-showwarn": "true",
+    "command-slowmode": "true",
     "command-time": "true",
     "command-tlm": "true",
     "command-unban": "true",
-	"command-unmute": "true",
+    "command-unmute": "true",
     "command-uinfo": "true",
     "command-warn": "true",
 
