--- a/config.json
+++ b/config.json
@@ -1,55 +1,56 @@
 {
-	"version": "2.6.0",
+    "version": "2.6.2",
     "language": "",
     "token": "",
     "command-prefix": "",
-	"custom-status": "online",
+    "custom-status": "online",
     "custom-activity": "",
-    "owner-id": "000000000000000000",
-    "local-channel-id": "000000000000000000",
-    "create-category-id": "000000000000000000",
-    "picture-only-channel-id": "000000000000000000",
-	"ticket-category-id": "000000000000000000",
+    "owner-id": 000000000000000000,
+    "local-channel-id": 000000000000000000,
+    "create-category-id": 000000000000000000,
+    "picture-only-channel-id": 000000000000000000,
+    "ticket-category-id": 000000000000000000,
     "auto-mute": "",
     "auto-kick": "",
     "auto-ban": "",
 
-    "chat-filter": "true",
+    "chat-filter": true,
     "chat-filter-action": "warn",
 
-    "debug-mode": "false",
+    "debug-mode": false,
 
-    "command-addadmin": "true",
-    "command-addbypass": "true",
-    "command-ban": "true",
-    "command-clear": "true",
-    "command-chlang": "true",
-    "command-chact": "true",
-    "command-copy": "true",
-    "command-clearwarn": "true",
-    "command-cd": "true",
-    "command-ci": "true",
-    "command-exit": "true",
-    "command-gay": "true",
-    "command-kick": "true",
-    "command-mute": "true",
-    "command-ping": "true",
-    "command-reload": "true",
-    "command-removeadmin": "true",
-    "command-removebypass": "true",
-	"command-showwarn": "true",
-    "command-slowmode": "true",
-	"command-send": "true",
-    "command-time": "true",
-    "command-tlm": "true",
-    "command-tempban": "true",
-    "command-tempmute": "true",
-    "command-unban": "true",
-    "command-unmute": "true",
-    "command-uinfo": "true",
-    "command-warn": "true",
+    "commands":{
+        "addadmin": true,
+        "addbypass": true,
+        "ban": true,
+        "clear": true,
+        "chlang": true,
+        "chact": true,
+        "copy": true,
+        "clearwarn": true,
+        "cd": true,
+        "ci": true,
+        "exit": true,
+        "gay": true,
+        "kick": true,
+        "mute": true,
+        "ping": true,
+        "reload": true,
+        "removeadmin": true,
+        "removebypass": true,
+        "showwarn": true,
+        "slowmode": true,
+        "send": true,
+        "time": true,
+        "tlm": true,
+        "tempban": true,
+        "tempmute": true,
+        "unban": true,
+        "unmute": true,
+        "uinfo": true,
+        "warn": true
+    },
+    "command-reset": true,
 
-    "command-reset": "true",
-
-    "music-bot": "true"
+    "music-bot": true
 }
