--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-    "version": "2.6.2",
+    "version": "2.6.3",
     "language": "",
     "token": "",
     "command-prefix": "",
     "custom-status": "online",
     "custom-activity": "",
-    "owner-id": 000000000000000000,
-    "local-channel-id": 000000000000000000,
-    "create-category-id": 000000000000000000,
-    "picture-only-channel-id": 000000000000000000,
-    "ticket-category-id": 000000000000000000,
+    "owner-id": 0,
+    "local-channel-id": 0,
+    "create-category-id": 0,
+    "picture-only-channel-id": 0,
+    "ticket-category-id": 0,
     "auto-mute": "",
     "auto-kick": "",
     "auto-ban": "",
