--- a/config.json
+++ b/config.json
@@ -1,23 +1,23 @@
 {
-    "version": "2.6.4",
-    "language": "",
-    "token": "",
-    "command-prefix": "",
+    "version": "2.6.5",
+    "language": "zh-tw",
+    "token": "Njk4ODExNzg4MzAwNTE3Mzc2.XpLRMQ.p_HPmsOi8syftdybr9-yzX6L7d8",
+    "command-prefix": ".",
     "custom-status": "online",
     "custom-activity": "",
-    "owner-id": 0,
-    "local-channel-id": 0,
-    "create-category-id": 0,
-    "picture-only-channel-id": 0,
-    "ticket-category-id": 0,
-    "auto-mute": "",
+    "owner-id": 413271975775961099,
+    "local-channel-id": 963019401366478898,
+    "create-category-id": 962687862007021628,
+    "picture-only-channel-id": 961759314123554839,
+    "ticket-category-id": 961759313184063552,
+    "auto-mute": "3",
     "auto-kick": "",
     "auto-ban": "",
 
     "chat-filter": true,
     "chat-filter-action": "warn",
 
-    "debug-mode": false,
+    "debug-mode": true,
 
     "commands":{
         "addadmin": true,
