--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
-    "version": "2.6.5",
+    "version": "2.7.0",
     "language": "",
     "token": "",
     "command-prefix": "",
     "custom-status": "online",
     "custom-activity": "",
     "owner-id": 0,
-    "local-channel-id": 0,
-    "create-category-id": 0,
+    "enter-private-voice-channel-id": 0,
+    "private-voice-category-id": 0,
     "picture-only-channel-id": 0,
     "ticket-category-id": 0,
     "auto-mute": "",
