--- a/config.json
+++ b/config.json
@@ -1,56 +1,16 @@
 {
-    "version": "2.7.0",
+    "version": "3.0.0",
     "language": "",
     "token": "",
     "command-prefix": "",
     "custom-status": "online",
-    "custom-activity": "",
+    "custom-activity": "playing",
+    "activity-name": "",
+    "activity-streaming-url": "",
     "owner-id": 0,
-    "enter-private-voice-channel-id": 0,
-    "private-voice-category-id": 0,
-    "picture-only-channel-id": 0,
     "ticket-category-id": 0,
-    "auto-mute": "",
-    "auto-kick": "",
-    "auto-ban": "",
-
-    "chat-filter": true,
-    "chat-filter-action": "warn",
 
     "debug-mode": false,
 
-    "commands":{
-        "addadmin": true,
-        "addbypass": true,
-        "ban": true,
-        "clear": true,
-        "chlang": true,
-        "chact": true,
-        "copy": true,
-        "clearwarn": true,
-        "cd": true,
-        "ci": true,
-        "exit": true,
-        "gay": true,
-        "kick": true,
-        "mute": true,
-        "ping": true,
-        "reload": true,
-        "removeadmin": true,
-        "removebypass": true,
-        "showwarn": true,
-        "slowmode": true,
-        "send": true,
-        "time": true,
-        "tlm": true,
-        "tempban": true,
-        "tempmute": true,
-        "unban": true,
-        "unmute": true,
-        "uinfo": true,
-        "warn": true
-    },
-    "command-reset": true,
-
-    "music-bot": true
+    "command-reset": true
 }
